# gradient-methods

./: .gitignore  CMakeLists.txt  README.md
report/: report.tex
src/: CMakeLists.txt  ConjugateGradients.cpp  ConjugateGradients.h  FastestDescent.cpp  FastestDescent.h  Function.cpp  Function.h  GradientDescent.cpp  GradientDescent.h  GradientMethods.cpp  GradientMethods.h  MatrixOperation.cpp  MatrixOperation.h  main.cpp
